// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs renders basic 1`] = `
.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  color: #4f6f8f;
  margin: 8px;
}

.c3 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4f6f8f;
}

.c3:hover {
  color: #4f6f8f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #001023;
}

.c5:hover {
  color: #001023;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <a
        className="c3"
        color="text.light"
        href="https://www.priceline.com"
        rel={null}
        size="medium"
      >
        Home
      </a>
      <div
        className="c4"
        color="text.light"
      >
        /
      </div>
    </div>
    <div
      className="c2"
    >
      <a
        className="c3"
        color="text.light"
        href="https://www.priceline.com/flights/"
        rel={null}
        size="medium"
      >
        Flights
      </a>
      <div
        className="c4"
        color="text.light"
      >
        /
      </div>
    </div>
    <div
      className="c2"
    >
      <a
        className="c5"
        color="text.dark"
        href="https://www.priceline.com/flights/"
        rel={null}
        size="medium"
      >
        Seat Selection
      </a>
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs renders with icons 1`] = `
.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  color: #4f6f8f;
  margin-right: 8px;
  width: 16px;
}

.c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  color: #001023;
  margin-right: 8px;
  width: 16px;
}

.c7 {
  outline: none;
}

.c4 {
  outline: none;
}

.c9 {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  color: #4f6f8f;
  margin: 8px;
}

.c5 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4f6f8f;
}

.c5:hover {
  color: #4f6f8f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c10 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #001023;
}

.c10:hover {
  color: #001023;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <svg
        aria-hidden={true}
        className="c3 c4"
        color="text.light"
        fill="currentcolor"
        focusable={false}
        height={16}
        role="img"
        tabIndex={-1}
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 20.5v-6h4v6h5v-8h3l-10-9-10 9h3v8h5z"
        />
      </svg>
      <a
        className="c5"
        color="text.light"
        href="https://www.priceline.com"
        rel={null}
        size="medium"
      >
        Home
      </a>
      <div
        className="c6"
        color="text.light"
      >
        /
      </div>
    </div>
    <div
      className="c2"
    >
      <svg
        aria-hidden={true}
        className="c3 c7"
        color="text.light"
        fill="currentcolor"
        focusable={false}
        height={16}
        role="img"
        tabIndex={-1}
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.5 16v-2l-8-5V3.5c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5V9l-8 5v2l8-2.5V19l-2 1.5V22l3.5-1 3.5 1v-1.5l-2-1.5v-5.5l8 2.5z"
        />
      </svg>
      <a
        className="c5"
        color="text.light"
        href="https://www.priceline.com/flights/"
        rel={null}
        size="medium"
      >
        Flights
      </a>
      <div
        className="c6"
        color="text.light"
      >
        /
      </div>
    </div>
    <div
      className="c2"
    >
      <svg
        aria-hidden={true}
        className="c8 c9"
        color="text.dark"
        fill="currentcolor"
        focusable={false}
        height={16}
        role="img"
        tabIndex={-1}
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 18v3h3v-3h10v3h3v-6H4v3zm15-8h3v3h-3v-3zM2 10h3v3H2v-3zm15 3H7V5c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2v8z"
        />
      </svg>
      <a
        className="c10"
        color="text.dark"
        href="https://www.priceline.com/flights/"
        rel={null}
        size="medium"
      >
        Seat Selection
      </a>
    </div>
  </div>
</div>
`;
